# beyond-local-file

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.kiro/hooks/: code-review.kiro.hook  prepare-release.kiro.hook
.kiro/specs/uvx-installable-tool/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: architecture.md  docstrings.md  local_file_structure.md  project_rules.md  reference_docs.md  tasks.md
.qoder/rules/: architecture.md  docstrings.md  local_file_structure.md  project_rules.md  tasks.md
.qoder/skills/kiro-steering-to-qoder-rules/: SKILL.md
.qoder/skills/kiro-steering-to-qoder-rules/scripts/: convert.py
.qoder/skills/qoder-rules-to-kiro-steering/: SKILL.md
.qoder/skills/qoder-rules-to-kiro-steering/scripts/: convert.py
.qoder/skills/sync-kiro-qoder-rules/: SKILL.md
.qoder/skills/sync-kiro-qoder-rules/scripts/: convert.py
.qoder/skills/sync-project-rules/: SKILL.md
.qoder/skills/sync-project-rules/scripts/: sync_rules_to_kiro.py  sync_rules_to_trae.py
.trae/rules/: project_rules.md
demo/: README.md  demo.tape  optimize-gif.sh  setup-demo.sh  test-commands.sh
docs/: README.md  advanced-usage.md  architecture-design.md  architecture-quick-reference.md  cli-reference.md  commands.md  config-format-clarification.md  configuration-reference.md  design-divide-and-conquer.md  design-model-separation.md  design-overview.md  development.md  platform-support.md  windows-support.md
scripts/: remove_kiro_validates.py
src/beyond_local_file/: __init__.py  cli.py  config.py  copy_manager.py  formatters.py  git_manager.py  link_strategy_protocol.py  models.py  options.py  project_processor.py  symlink_manager.py  sync_state.py
src/beyond_local_file/model/: __init__.py  config.py  processing.py  translator.py
tests/: conftest.py
tests/integration/: test_enhanced_prompt.py
tests/property/: __init__.py  test_infrastructure.py  test_path_resolution.py
tests/unit/: test_backward_compatibility.py  test_cli_commands.py  test_link_strategy_protocol.py  test_metadata.py  test_mixed_config.py  test_model_translator.py  test_multiple_targets.py  test_operations.py  test_package_structure.py  test_symlink_manager.py  test_synthetic_name_path_resolution.py
